--- a/extractor/pubspec.yaml
+++ b/extractor/pubspec.yaml
@@ -6,7 +6,8 @@ environment:
   sdk: ^3.9.2
 
 dependencies:
-  path: ^1.9.0
+  collection: ^1.19.1
+  path: ^1.9.1
   sqlite3: ^2.9.3
 
 dev_dependencies:
