--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "sqlite3": "^5.1.7",
     "winston": "^3.14.2",
     "zod": "^4.0.14"
   },
