Add CDN usage, text querying, frames fethcing

--- a/backend/docker-compose.dev.yml
+++ b/backend/docker-compose.dev.yml
@@ -7,6 +7,7 @@ services:
       - .env
     environment:
       NODE_ENV: ${NODE_ENV}
+      CDN_PREFIX: ${CDN_PREFIX}
     ports:
       - 8080:8080
     volumes:
