--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build: ./server
     environment:
       NODE_ENV: ${NODE_ENV}
+      CDN_PREFIX: ${CDN_PREFIX}
     image: jerememe_server
     container_name: jerememe_server
     ports:
