--- a/backend/docker-compose.dev.yml
+++ b/backend/docker-compose.dev.yml
@@ -7,6 +7,10 @@ services:
       - .env
     environment:
       NODE_ENV: ${NODE_ENV}
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+      S3_REGION: ${S3_REGION}
+      S3_BUCKET_NAME: ${S3_BUCKET_NAME}
       CDN_PREFIX: ${CDN_PREFIX}
     ports:
       - 8080:8080
