--- a/backend/server/Dockerfile
+++ b/backend/server/Dockerfile
@@ -3,6 +3,8 @@ FROM node:24-alpine3.21
 ENV NODE_ENV $NODE_ENV
 ENV BASE_URL $BASE_URL
 
+RUN apk add --no-cache ffmpeg
+
 # Source code
 WORKDIR /srv/
 COPY package.json .
