--- a/backend/server/Dockerfile.dev
+++ b/backend/server/Dockerfile.dev
@@ -3,6 +3,8 @@ FROM node:24-alpine3.21
 ENV NODE_ENV $NODE_ENV
 ENV BASE_URL $BASE_URL
 
+RUN apk add --no-cache ffmpeg
+
 # Install dependencies in the development image
 WORKDIR /srv/server
 COPY package*.json ./
