--- a/backend/server/Dockerfile.dev
+++ b/backend/server/Dockerfile.dev
@@ -4,6 +4,10 @@ ENV NODE_ENV $NODE_ENV
 ENV BASE_URL $BASE_URL
 
 RUN apk add --no-cache ffmpeg
+# "Impact" font
+RUN apk --no-cache add msttcorefonts-installer fontconfig && \
+    update-ms-fonts && \
+    fc-cache -f
 
 # Install dependencies in the development image
 WORKDIR /srv/server
