--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   http: ^1.5.0
   json_annotation: ^4.9.0
   riverpod_annotation: ^3.0.2
+  shimmer_animation: ^2.2.2
   video_player: ^2.10.0
 
 dev_dependencies:
