--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^3.0.2
   freezed_annotation: ^3.1.0
+  google_fonts: ^6.3.2
   go_router: ^16.2.5
   http: ^1.5.0
   json_annotation: ^4.9.0
