--- a/backend/server/Dockerfile.dev
+++ b/backend/server/Dockerfile.dev
@@ -4,10 +4,6 @@ ENV NODE_ENV $NODE_ENV
 ENV BASE_URL $BASE_URL
 
 RUN apk add --no-cache ffmpeg
-# "Impact" font
-RUN apk --no-cache add msttcorefonts-installer fontconfig && \
-    update-ms-fonts && \
-    fc-cache -f
 
 # Install dependencies in the development image
 WORKDIR /srv/server
@@ -15,6 +11,7 @@ COPY package*.json ./
 RUN npm install
 
 COPY data.db ./data.db
+COPY lithos.ttf ./lithos.ttf
 
 COPY tsconfig.json ./
 
