--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   riverpod_annotation: ^3.0.2
   shimmer_animation: ^2.2.2
   video_player: ^2.10.0
+  web: ^1.1.1
 
 dev_dependencies:
   build_runner: ^2.7.1
