--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
+  flutter_animate: ^4.5.2
   flutter_riverpod: ^3.0.2
   freezed_annotation: ^3.1.0
   google_fonts: ^6.3.2
@@ -19,7 +20,6 @@ dependencies:
   http: ^1.5.0
   json_annotation: ^4.9.0
   riverpod_annotation: ^3.0.2
-  shimmer_animation: ^2.2.2
   video_player: ^2.10.0
   web: ^1.1.1
 
