--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   riverpod_annotation: ^3.0.2
   video_player: ^2.10.0
   web: ^1.1.1
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   build_runner: ^2.7.1
