--- a/backend/server/Dockerfile.dev
+++ b/backend/server/Dockerfile.dev
@@ -6,15 +6,15 @@ ENV BASE_URL $BASE_URL
 RUN apk add --no-cache ffmpeg
 
 # Install dependencies in the development image
-WORKDIR /srv/server
-COPY package*.json ./
+WORKDIR /srv
+COPY package*.json .
 RUN npm install
 
 COPY data.db ./data.db
 COPY lithos.ttf ./lithos.ttf
 
-COPY tsconfig.json ./
+COPY tsconfig.json .
 
 EXPOSE 8080
 
-CMD npm run dev
+CMD [ "npm", "run", "dev" ]
